Commit teste/Pequenas alterações do CSS e links

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <title>PlayGames - Home</title>
@@ -11,7 +11,7 @@
     <header>
     <div class="navbar">
       <div class="col-3">
-        <a id="logo" href="index.html">
+        <a id="logo" href="./index.html">
           <div class="logo-div">
             <img src="../images/logo.png" alt="logo" class="logo">
             <span class="logo-title">PLAY GAMES</span>
@@ -24,14 +24,14 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="admin-categories.html">Categorias</a>
-            <a href="admin-products.html">Produtos</a>
+            <a href="./admin-categories.html">Categorias</a>
+            <a href="./admin-products.html">Produtos</a>
           </div>
         </div>
-        <a href="produtos.html">Produtos</a>
-        <a href="pedidos.html">Pedidos</a>
-        <a href="contatos.html">Contato</a>
-        <a href="sobre.html">Sobre</a>
+        <a href="./produtos.html">Produtos</a>
+        <a href="./pedidos.html">Pedidos</a>
+        <a href="./contatos.html">Contato</a>
+        <a href="./sobre.html">Sobre</a>
       </div>
       <div class="col-3 cart">
         <a type="button" name="button" class="cart">
