--- a/src/admin-categories.html
+++ b/src/admin-categories.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <title>PlayGames - Administração</title>
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/grid.css">
-    <link rel="stylesheet" href="../styles/admin.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/grid.css" />
+    <link rel="stylesheet" href="../styles/admin.css" />
     <script src="../js/admin-categories.js"></script>
   </head>
   <body>
     <div class="navbar">
       <div class="col-3">
-        <a id="logo" href="index.html">
+        <a id="logo" href="./index.html">
           <div class="logo-div">
-            <img src="../images/logo.png" alt="logo" class="logo">
+            <img src="../images/logo.png" alt="logo" class="logo" />
             <span class="logo-title">PLAY GAMES</span>
           </div>
         </a>
       </div>
       <div class="col-6 menu">
         <div class="dropdown">
-          <button class="dropbtn">
-            Administração
-          </button>
+          <button class="dropbtn">Administração</button>
           <div class="dropdown-content">
-            <a href="admin-categories.html">Categorias</a>
-            <a href="admin-products.html">Produtos</a>
+            <a href="./admin-categories.html">Categorias</a>
+            <a href="./admin-products.html">Produtos</a>
           </div>
         </div>
-        <a href="produtos.html">Produtos</a>
-        <a href="pedidos.html">Pedidos</a>
-        <a href="contatos.html">Contato</a>
-        <a href="sobre.html">Sobre</a>
+        <a href="./produtos.html">Produtos</a>
+        <a href="./pedidos.html">Pedidos</a>
+        <a href="./contatos.html">Contato</a>
+        <a href="./sobre.html">Sobre</a>
       </div>
       <div class="col-3 cart">
         <a type="button" name="button" class="cart">
-          <img src="../images/cart.png" alt="cart" class="cart-icon">
+          <img src="../images/cart.png" alt="cart" class="cart-icon" />
         </a>
       </div>
     </div>
@@ -54,29 +52,28 @@
             </tr>
           </thead>
         </table>
-
       </div>
       <div class="content-box">
         <form onsubmit="createCategory(this)">
           <label for="name">Nome da Categoria</label>
-          <input type="text" name="name" placeholder="Nome">
+          <input type="text" name="name" placeholder="Nome" />
 
           <button type="submit">Criar Categoria</button>
         </form>
       </div>
     </div>
 
-  <div id="editModal" class="modal">
-    <div class="modal-content">
-      <span onclick="closeEditModal();">&times;</span>
-      <form onsubmit="editCategory(this)" id="editForm">
-        <input type="text" name="id" hidden>
-        <label for="name">Nome</label>
-        <input type="text" name="name" placeholder="Nome">
+    <div id="editModal" class="modal">
+      <div class="modal-content">
+        <span onclick="closeEditModal();">&times;</span>
+        <form onsubmit="editCategory(this)" id="editForm">
+          <input type="text" name="id" hidden />
+          <label for="name">Nome</label>
+          <input type="text" name="name" placeholder="Nome" />
 
-        <button type="submit">Editar Categoria</button>
-      </form>
+          <button type="submit">Editar Categoria</button>
+        </form>
+      </div>
     </div>
-  </div>
   </body>
 </html>
