--- a/src/admin-products.html
+++ b/src/admin-products.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <title>PlayGames - Administração</title>
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/grid.css">
-    <link rel="stylesheet" href="../styles/admin.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/grid.css" />
+    <link rel="stylesheet" href="../styles/admin.css" />
     <script src="../js/admin-products.js"></script>
   </head>
   <body>
     <div class="navbar">
       <div class="col-3">
-        <a id="logo" href="index.html">
+        <a id="logo" href="./index.html">
           <div class="logo-div">
-            <img src="../images/logo.png" alt="logo" class="logo">
+            <img src="../images/logo.png" alt="logo" class="logo" />
             <span class="logo-title">PLAY GAMES</span>
           </div>
         </a>
       </div>
       <div class="col-6 menu">
         <div class="dropdown">
-          <button class="dropbtn">Administração
+          <button class="dropbtn">
+            Administração
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="admin-categories.html">Categorias</a>
-            <a href="admin-products.html">Produtos</a>
+            <a href="./admin-categories.html">Categorias</a>
+            <a href="./admin-products.html">Produtos</a>
           </div>
         </div>
-        <a href="produtos.html">Produtos</a>
-        <a href="pedidos.html">Pedidos</a>
-        <a href="contatos.html">Contato</a>
-        <a href="sobre.html">Sobre</a>
+        <a href="./produtos.html">Produtos</a>
+        <a href="./pedidos.html">Pedidos</a>
+        <a href="./contatos.html">Contato</a>
+        <a href="./sobre.html">Sobre</a>
       </div>
       <div class="col-3 cart">
         <a type="button" name="button" class="cart">
-          <img src="../images/cart.png" alt="cart" class="cart-icon">
+          <img src="../images/cart.png" alt="cart" class="cart-icon" />
         </a>
       </div>
     </div>
@@ -63,24 +64,27 @@
       <div class="content-box">
         <form onsubmit="createProduct(this)">
           <label for="cod">Código</label>
-          <input type="number" name="cod" placeholder="123">
+          <input type="number" name="cod" placeholder="123" />
 
           <label for="cat">Categoria</label>
-          <select name="cat" id="categories-create">
-          </select>
+          <select name="cat" id="categories-create"></select>
 
           <label for="name">Nome</label>
-          <input type="text" name="name" placeholder="Nome do Produto">
+          <input type="text" name="name" placeholder="Nome do Produto" />
 
           <label for="desc">Descrição</label>
-          <textarea name="desc" rows="4" value="">
-          </textarea>
+          <textarea name="desc" rows="4" value=""> </textarea>
 
           <label for="weight">Peso</label>
-          <input type="text" name="weight" placeholder="23,56">
+          <input type="text" name="weight" placeholder="23,56" />
 
           <label for="price">Preço</label>
-          R$<input type="text" name="price" hint="em reais" placeholder="123,45">
+          R$<input
+            type="text"
+            name="price"
+            hint="em reais"
+            placeholder="123,45"
+          />
 
           <button type="submit">Criar Produto</button>
         </form>
@@ -91,24 +95,27 @@
           <span onclick="closeEditModal();">&times;</span>
           <form onsubmit="editProduct(this)" id="editForm">
             <label for="cod">Código</label>
-            <input type="number" name="cod" placeholder="123">
+            <input type="number" name="cod" placeholder="123" />
 
             <label for="cat">Categoria</label>
-            <select name="cat" id="categories-edit">
-            </select>
+            <select name="cat" id="categories-edit"></select>
 
             <label for="name">Nome</label>
-            <input type="text" name="name" placeholder="Nome do Produto">
+            <input type="text" name="name" placeholder="Nome do Produto" />
 
             <label for="desc">Descrição</label>
-            <textarea name="desc" rows="4">
-            </textarea>
+            <textarea name="desc" rows="4"> </textarea>
 
             <label for="weight">Peso</label>
-            <input type="text" name="weight" placeholder="23,56">
+            <input type="text" name="weight" placeholder="23,56" />
 
             <label for="price">Preço</label>
-            R$<input type="text" name="price" hint="em reais" placeholder="23,56">
+            R$<input
+              type="text"
+              name="price"
+              hint="em reais"
+              placeholder="23,56"
+            />
 
             <button type="submit">Editar Produto</button>
           </form>
