--- a/src/produtos.html
+++ b/src/produtos.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <title>PlayGames - Produtos</title>
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/grid.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/grid.css" />
   </head>
   <body>
     <div class="navbar">
       <div class="col-3">
-        <a id="logo" href="index.html">
+        <a id="logo" href="./index.html">
           <div class="logo-div">
-            <img src="../images/logo.png" alt="logo" class="logo">
+            <img src="../images/logo.png" alt="logo" class="logo" />
             <span class="logo-title">PLAY GAMES</span>
           </div>
         </a>
       </div>
       <div class="col-6 menu">
         <div class="dropdown">
-          <button class="dropbtn">Administração
+          <button class="dropbtn">
+            Administração
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="admin-categories.html">Categorias</a>
-            <a href="admin-products.html">Produtos</a>
+            <a href="./admin-categories.html">Categorias</a>
+            <a href="./admin-products.html">Produtos</a>
           </div>
         </div>
-        <a href="produtos.html">Produtos</a>
-        <a href="pedidos.html">Pedidos</a>
-        <a href="contatos.html">Contato</a>
-        <a href="sobre.html">Sobre</a>
+        <a href="./produtos.html">Produtos</a>
+        <a href="./pedidos.html">Pedidos</a>
+        <a href="./contatos.html">Contato</a>
+        <a href="./sobre.html">Sobre</a>
       </div>
       <div class="col-3 cart">
         <a type="button" name="button" class="cart">
-          <img src="../images/cart.png" alt="cart" class="cart-icon">
+          <img src="../images/cart.png" alt="cart" class="cart-icon" />
         </a>
       </div>
     </div>
