--- a/src/client_register.html
+++ b/src/client_register.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="user-box">
-        <input class="input" type="text" id="cpf" name="cpf" required="true">
+        <input class="input" type="text" id="cpf" maxlength=11 name="cpf" required="true">
         <div class="cut"></div>
         <label class="placeholder" for="cpf">CPF</label>
       </div>
@@ -30,72 +30,72 @@
         <input class="input" type="text" id="zip-code" name="zip-code" required="true" maxlength=8>
         <div class="cut"></div>
         <label class="placeholder" for="zip-code">CEP</label>
-        <span class="error-message" id="zip-code-error">CEP não encontrado</span>
       </div>
 
-        <div class="user-box zip-code-dependent hidden">
-          <input class="input" type="text" id="street" name="street" required="true">
-          <div class="cut"></div>
-          <label class="placeholder" for="street">Rua</label>
-        </div>
+      <!-- TODO Devem ficar escondidos até o CPF ser colocado? -->
+      <div class="user-box zip-code-dependent hidden">
+        <input class="input" type="text" id="street" name="street" required="true">
+        <div class="cut"></div>
+        <label class="placeholder" for="street">Rua</label>
+      </div>
 
-        <div class="user-box zip-code-dependent hidden">
-          <input class="input" type="number" id="nr" name="nr" required="true">
-          <div class="cut"></div>
-          <label class="placeholder" for="nr">Número</label>
-        </div>
+      <div class="user-box zip-code-dependent hidden">
+        <input class="input" type="number" id="nr" name="nr" required="true">
+        <div class="cut"></div>
+        <label class="placeholder" for="nr">Número</label>
+      </div>
 
-        <div class="user-box zip-code-dependent hidden">
-          <input class="input" type="text" id="complement" name="complement" required="true">
-          <div class="cut"></div>
-          <label class="placeholder" for="complement">Complemento</label>
-        </div>
+      <div class="user-box zip-code-dependent hidden">
+        <input class="input" type="text" id="complement" name="complement" required="true">
+        <div class="cut"></div>
+        <label class="placeholder" for="complement">Complemento</label>
+      </div>
 
-        <div class="user-box zip-code-dependent hidden">
-          <input class="input" type="text" id="neighborhood" name="neighborhood" required="true">
-          <div class="cut"></div>
-          <label class="placeholder" for="neighborhood">Bairro</label>
-        </div>
+      <div class="user-box zip-code-dependent hidden">
+        <input class="input" type="text" id="neighborhood" name="neighborhood" required="true">
+        <div class="cut"></div>
+        <label class="placeholder" for="neighborhood">Bairro</label>
+      </div>
 
-        <div class="user-box zip-code-dependent hidden">
-          <input class="input" type="text" id="city" name="city" required="true">
-          <div class="cut"></div>
-          <label class="placeholder" for="city">Cidade</label>
-        </div>
+      <div class="user-box zip-code-dependent hidden">
+        <input class="input" type="text" id="city" name="city" required="true">
+        <div class="cut"></div>
+        <label class="placeholder" for="city">Cidade</label>
+      </div>
 
-        <div class="user-box zip-code-dependent hidden">
-          <select class="input" id="state" name="state" required="true">
-            <option value="" disabled>Selecione o Estado</option>
-            <option value="ac">Acre</option>
-            <option value="al">Alagoas</option>
-            <option value="ap">Amapá</option>
-            <option value="am">Amazonas</option>
-            <option value="ba">Bahia</option>
-            <option value="ce">Ceará</option>
-            <option value="df">Distrito Federal</option>
-            <option value="es">Espírito Santo</option>
-            <option value="go">Goiás</option>
-            <option value="ma">Maranhão</option>
-            <option value="mt">Mato Grosso</option>
-            <option value="ms">Mato Grosso do Sul</option>
-            <option value="mg">Minas Gerais</option>
-            <option value="pa">Pará</option>
-            <option value="pb">Paraíba</option>
-            <option value="pr">Paraná</option>
-            <option value="pe">Pernambuco</option>
-            <option value="pi">Piauí</option>
-            <option value="rj">Rio de Janeiro</option>
-            <option value="rn">Rio Grande do Norte</option>
-            <option value="rs">Rio Grande do Sul</option>
-            <option value="ro">Rondônia</option>
-            <option value="rr">Roraima</option>
-            <option value="sc">Santa Catarina</option>
-            <option value="sp">São Paulo</option>
-            <option value="se">Sergipe</option>
-            <option value="to">Tocantins</option>
-          </select>
-        </div>
-        <button type="submit" name="submit">Registrar</button>
+      <div class="user-box zip-code-dependent hidden">
+        <select class="input" id="state" name="state" required="true">
+          <option value="" disabled>Selecione o Estado</option>
+          <option value="ac">Acre</option>
+          <option value="al">Alagoas</option>
+          <option value="ap">Amapá</option>
+          <option value="am">Amazonas</option>
+          <option value="ba">Bahia</option>
+          <option value="ce">Ceará</option>
+          <option value="df">Distrito Federal</option>
+          <option value="es">Espírito Santo</option>
+          <option value="go">Goiás</option>
+          <option value="ma">Maranhão</option>
+          <option value="mt">Mato Grosso</option>
+          <option value="ms">Mato Grosso do Sul</option>
+          <option value="mg">Minas Gerais</option>
+          <option value="pa">Pará</option>
+          <option value="pb">Paraíba</option>
+          <option value="pr">Paraná</option>
+          <option value="pe">Pernambuco</option>
+          <option value="pi">Piauí</option>
+          <option value="rj">Rio de Janeiro</option>
+          <option value="rn">Rio Grande do Norte</option>
+          <option value="rs">Rio Grande do Sul</option>
+          <option value="ro">Rondônia</option>
+          <option value="rr">Roraima</option>
+          <option value="sc">Santa Catarina</option>
+          <option value="sp">São Paulo</option>
+          <option value="se">Sergipe</option>
+          <option value="to">Tocantins</option>
+        </select>
+      </div>
+      <button type="submit" name="submit">Registrar</button>
     </form>
   </div>
   </div>
