add to cart, image upload and generate payment

--- a/src/admin-products.html
+++ b/src/admin-products.html
@@ -35,11 +35,6 @@
         <a href="./contatos.html">Contato</a>
         <a href="./sobre.html">Sobre</a>
       </div>
-      <div class="col-3 cart">
-        <a type="button" name="button" class="cart">
-          <img src="../images/cart.png" alt="cart" class="cart-icon" />
-        </a>
-      </div>
     </div>
 
     <div class="">
@@ -86,6 +81,9 @@
             placeholder="123,45"
           />
 
+          <label for="imagem">Imagem</label>
+          <input type="url" name="url" placeholder="URL da imagem">
+
           <button type="submit">Criar Produto</button>
         </form>
       </div>
@@ -116,6 +114,9 @@
               hint="em reais"
               placeholder="23,56"
             />
+
+            <label for="imagem">Imagem</label>
+            <input type="url" name="url" placeholder="URL da imagem">
 
             <button type="submit">Editar Produto</button>
           </form>
