--- a/src/client_register.html
+++ b/src/client_register.html
@@ -5,66 +5,80 @@
   <meta charset="utf-8">
   <title>Cadastro de Cliente</title>
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="../styles/client-register.css">
+  <link rel="stylesheet" href="../styles/client_register.css">
   <script src="../js/client_register.js"></script>
+  <script type="text/javascript">
+    function submitForm(form) {
+      localStorage.setItem('nome', form.name.value);
+      localStorage.setItem('cpf', form.cpf.value);
+      localStorage.setItem('cep', form.zipcode.value);
+      localStorage.setItem('rua', form.street.value);
+      localStorage.setItem('numero', form.nr.value);
+      localStorage.setItem('complemento', form.complement.value);
+      localStorage.setItem('bairro', form.neighborhood.value);
+      localStorage.setItem('cidade', form.city.value);
+      localStorage.setItem('uf', form.state.value);
+      localStorage.setItem('form', 'submitted');
+    }
+  </script>
 </head>
 
 <body onload="onLoad();">
   <div class="register-box">
     <h2>Bem-vind@!</h2>
 
-    <form class="" action="url" method="post">
+    <form id="form" onsubmit="submitForm(this)">
       <div class="user-box">
-        <input class="input" type="text" id="name" name="name" required="true">
+        <input class="input" type="text" id="name" name="name" required>
         <div class="cut"></div>
         <label class="placeholder" for="name">Nome</label>
       </div>
 
       <div class="user-box">
-        <input class="input" type="text" id="cpf" maxlength=11 name="cpf" required="true">
+        <input class="input" type="text" id="cpf" maxlength=11 name="cpf" required>
         <div class="cut"></div>
         <label class="placeholder" for="cpf">CPF</label>
       </div>
 
       <div class="user-box">
-        <input class="input" type="text" id="zip-code" name="zip-code" required="true" maxlength=8>
+        <input class="input" type="text" id="zip-code" name="zipcode" required maxlength="8">
         <div class="cut"></div>
-        <label class="placeholder" for="zip-code">CEP</label>
+        <label class="placeholder" for="zipcode">CEP</label>
       </div>
 
       <!-- TODO Devem ficar escondidos até o CPF ser colocado? -->
       <div class="user-box zip-code-dependent hidden">
-        <input class="input" type="text" id="street" name="street" required="true">
+        <input class="input" type="text" id="street" name="street" required>
         <div class="cut"></div>
         <label class="placeholder" for="street">Rua</label>
       </div>
 
       <div class="user-box zip-code-dependent hidden">
-        <input class="input" type="number" id="nr" name="nr" required="true">
+        <input class="input" type="number" id="nr" name="nr" required>
         <div class="cut"></div>
         <label class="placeholder" for="nr">Número</label>
       </div>
 
       <div class="user-box zip-code-dependent hidden">
-        <input class="input" type="text" id="complement" name="complement" required="true">
+        <input class="input" type="text" id="complement" name="complement">
         <div class="cut"></div>
         <label class="placeholder" for="complement">Complemento</label>
       </div>
 
       <div class="user-box zip-code-dependent hidden">
-        <input class="input" type="text" id="neighborhood" name="neighborhood" required="true">
+        <input class="input" type="text" id="neighborhood" name="neighborhood" required>
         <div class="cut"></div>
         <label class="placeholder" for="neighborhood">Bairro</label>
       </div>
 
       <div class="user-box zip-code-dependent hidden">
-        <input class="input" type="text" id="city" name="city" required="true">
+        <input class="input" type="text" id="city" name="city" required>
         <div class="cut"></div>
         <label class="placeholder" for="city">Cidade</label>
       </div>
 
       <div class="user-box zip-code-dependent hidden">
-        <select class="input" id="state" name="state" required="true">
+        <select class="input" id="state" name="state" required>
           <option value="" disabled>Selecione o Estado</option>
           <option value="ac">Acre</option>
           <option value="al">Alagoas</option>
