update - admin/categories

--- a/src/admin-categories.html
+++ b/src/admin-categories.html
@@ -62,8 +62,9 @@
     <div id="modal" class="modal">
       <div class="modal-content" style="width: 25%;">
         <span onclick="closeModal();" style="float:right;">&times;</span>
-        <form onsubmit="saveCategory(this)" id="editForm">
+        <form onsubmit="saveCategory(this)" id="form">
           <input type="text" name="id" hidden />
+          
           <label for="name">Nome</label>
           <input type="text" name="name" placeholder="Nome" />
 
