--- a/src/admin-categories.html
+++ b/src/admin-categories.html
@@ -61,10 +61,10 @@
 
     <div id="modal" class="modal">
       <div class="modal-content" style="width: 25%;">
-        <span onclick="closeModal();" style="float:right;">&times;</span>
+        <span onclick="closeModal();" style="float:right;margin-left: 15px;">&times;</span>
         <form onsubmit="saveCategory(this)" id="form">
           <input type="text" name="id" hidden />
-          
+
           <label for="name">Nome</label>
           <input type="text" name="name" placeholder="Nome" />
 
