fix - admin/products

--- a/src/admin-products.html
+++ b/src/admin-products.html
@@ -45,6 +45,7 @@
         <span type="button" class="filter-span">
           Filtar por Categoria:
           <select id="categories-filter" onchange="listProducts(this)">
+            <option value="" text="" data-default selected>Todas</option>
           </select>
         </span>
         <button type="button" class="new-product-btn" onclick="openModal()">
